# alcohol_logistic_eda

./: .gitignore  EDA.ipynb  README.md  pyproject.toml
docs/: data_schema.md
src/: utils.py
